Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.xx
DATE 0x/xx/2008
10th Alpha Release

NEWS:


NEW: [features/improvements]


BUG FIXES:


#-----------------------------------------------------------------------------#

VERSION 0.2.50
DATE 01/19/2008
9th Alpha Release

NEWS:

I am happy to announce the first release of Editra for 2008. It has been a 
slightly longer that usual development cycle for this release so hopefully 
extra amount of work that went in will be visible. Here are some of the most 
notable points in this release, there is a new version of the bundled 
FileBrowser plugin that has been enhanced to be able handle most file system 
operations. There were also a number of UI and usability improvements made to 
the editor, as well as support for some new programming languages. Besides the 
new features and improvements there are a number of bugs that have been fixed 
to further stabilize the editor.

NEW: [features/improvements]
+Number of major enhancements to the FileBrowser plugin
+Support for highlighting PL/SQL and improved SQL highlighting (contributed by Thomas Keul)
+Support for highlighting (Boo, Pike) programming languages
+New highlighting color scheme "BlueMonday" (by Thomas Keul)
+Shift+Ctrl+I will toggle usage of Tabs and Soft Tabs.
+Shift+Ctrl+C to duplicate current line
+F3/Shift+F3 can be used as shortcuts for Find Next/Find Previous in the quick
 find bar. These bindings are in addition to the already existing 
 Enter/Shift+Enter ones.
+Number of General UI improvements
+Minor python autocompletion improvements
+Add German Translation (contributed by DR0ID)
+Updated Spanish and Japanese translations
+New logging system
+Proxy support for downloading plugins/updates
+LogViewer for viewing Editra's log output in the Shelf