@@ -1,3 +1,7 @@
+/* Syntax Highlighting Test File for Editra Style Sheets
+ * Comments are like this
+ */
+
 default_style {
 		fore: #FFFFFF;
 		back: #000000;
@@ -11,8 +15,9 @@ keyword_style {
 		size: %(size)d;
 }
 
+/* Definition with a bad attribute size5 */
 class_style {
 		fore: #2E8B57 bold;
 		back: #F6F6F6;
-		size: %(size)d;
+		size5: %(size)d;
 }
